--- a/class-7/style.css
+++ b/class-7/style.css
@@ -1,4 +1,4 @@
-body{background: #ddd;font-family: 'Roboto', sans-serif; font-weight: 300 }
+body{font-family: 'Roboto', sans-serif; font-weight: 300; background-image: url(bd.jpg);background-attachment: fixed; }
 h1, h2, h3 :{font-family: 'Spirax', cursive;}
 
 
